adjust clean architecture layout
