# cmd/app/app.go
@@ -1,10 +1,11 @@
 package main
 
 import (
-	"test/v2/internal/controllers"
-	"test/v2/internal/middlewares"
+	// "test/v2/internal/controllers"
 
 	_ "test/v2/docs"
+	"test/v2/internal/adapter"
+	"test/v2/internal/adapter/sqlite"
 
 	"github.com/gin-gonic/gin"
 
@@ -12,24 +13,25 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-// @title           Swagger Example API
+// @title           GIN JWT API
 // @version         1.0
 // @host      localhost:8080
 // @BasePath  /api
 func main() {
-	router := initRouter()
+	sqlite.ConnDB()
+	router := setupRouter()
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.Run(":8080")
 }
 
-func initRouter() *gin.Engine {
+func setupRouter() *gin.Engine {
 	router := gin.Default()
 	api := router.Group("/api")
-	api.POST("/user/register", controllers.RegisterUser)
-	api.POST("/token", controllers.GenerateToken)
+	adapter.LoadUserRouter(api)
+	// api.POST("/user/register", controllers.RegisterUser)
+	// api.POST("/token", controllers.GenerateToken)
 
-	v1 := api.Group("/v1").Use(middlewares.Auth())
-	v1.GET("/ping", controllers.Ping)
+	// v1 := api.Group("/v1").Use(middlewares.Auth())
 
 	return router
 }
